# turboquant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/reports/: coverage-gap-inventory.md  device-boundary-map.md  performance-tuning-playbook.md  profiling-2026-03-30.md
src/: lib.rs
src/api/: burn_ext.rs  kernel.rs  mod.rs
src/bench/: mod.rs
src/burn_ext/: mod.rs
src/kernels/: mod.rs  tests.rs
